# roteiro-sdk

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: README.md  generated-operations.md  plugins.md  python.md  sdk-coverage.md  typescript.md
python/: README.md  pyproject.toml
python/examples/: quickstart.py
python/roteiro/: __init__.py  analysis.py  attachments.py  client.py  collections.py  generated.py  indoor.py  layers.py  models.py  pipeline.py  raster.py  vcs.py
python/simplegis/: __init__.py  client.py
python/tests/: test_client.py  test_generated.py  test_indoor.py  test_models.py  test_raster.py  test_vcs.py
scripts/: generate_full_sdk_clients.py  sync_cairn_api_parity.py
typescript/: README.md  package-lock.json  package.json
typescript/examples/: quickstart.ts
typescript/src/: analysis.ts  attachments.ts  client.ts  collections.ts  generated.ts  index.ts  indoor.ts  layers.ts  pipeline.ts  raster.ts  types.ts  vcs.ts
typescript/test/: attachments.test.ts  client.test.ts  generated.test.ts  indoor.test.ts  raster.test.ts  vcs.test.ts
